<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background">
<com.openclassrooms.ham.editeurtexte.Slider
    android:id="@+id/slider"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RelativeLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/style_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/button_italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    style="@style/StyleButton"
                    android:text="@string/italic" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/button_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    style="@style/StyleButton"
                    android:text="@string/bold" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/button_underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    style="@style/StyleButton"
                    android:text="@string/underlined" />
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/smiley_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/style_buttons"
            style="@style/NormalText"
            android:text="@string/smiley"  />
        <ImageView
            android:id="@+id/smiley_smile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/style_buttons"
            android:layout_toEndOf="@id/smiley_text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/smile" />
        <ImageView
            android:id="@+id/smiley_big_smile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/style_buttons"
            android:layout_toEndOf="@id/smiley_smile"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/big_smile"/>
        <ImageView
            android:id="@+id/smiley_wink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/style_buttons"
            android:layout_toEndOf="@id/smiley_big_smile"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/wink"/>
        <RadioGroup
            android:id="@+id/color_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_below="@id/smiley_text"
            style="@style/NormalText"
            android:orientation="horizontal"
            android:checkedButton="@+id/color_black">
            <RadioButton
                android:id="@+id/color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_black"/>
            <RadioButton
                android:id="@+id/color_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_blue"/>
            <RadioButton
                android:id="@+id/color_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_red" />
        </RadioGroup>
    </RelativeLayout>
    <Button
        android:id="@+id/hide_show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_menu"
        android:layout_centerHorizontal="true"
        style="@style/HideShowButton"
        android:text="@string/hide"/>
    <ImageView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@id/hide_show_button"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_textfield"/>
    <TextView
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        style="@style/NormalText"
        android:text="@string/edit"
        />
    <TextView
        android:id="@+id/prev_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        style="@style/NormalText"
        android:layout_below="@id/edition_box"
        android:text="@string/preview"/>
    <EditText
        android:id="@+id/edition_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_toEndOf="@id/edit_text"
        android:layout_alignLeft="@+id/prev_box"
        android:gravity="top|left"
        android:background="#FFFFFF"
        android:inputType="textMultiLine"
        android:lines="3"/>
    <TextView
        android:id="@+id/prev_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/prev_text"
        android:layout_below="@id/edition_box"
        style="@style/NormalText" />
</com.openclassrooms.ham.editeurtexte.Slider>
</FrameLayout>